k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memelibre
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: memelibre
  template:
    metadata:
      labels:
        app: memelibre
    spec:
      containers:
        - name: memelibre
          image: benjaminpla/memelibre:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 3000
