k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memelibre
  namespace: default
spec:
  selector:
    app: memelibre
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
